// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ebay-toggle-button-group > renders controlled 1`] = `
"[36m<DocumentFragment>[39m
  [36m<div[39m
    [33mstyle[39m=[32m"width:100%"[39m
  [36m>[39m
    [36m<button[39m
      [33mclass[39m=[32m"btn btn--secondary"[39m
      [33mdata-ebayui[39m=[32m""[39m
      [33mtype[39m=[32m"button"[39m
    [36m>[39m
      [0mClear Selection[0m
    [36m</button>[39m
    [36m<div[39m
      [33mclass[39m=[32m"toggle-button-group"[39m
    [36m>[39m
      [36m<ul[39m
        [33maria-label[39m=[32m"Toggle Button Group"[39m
      [36m>[39m
        [36m<li>[39m
          [36m<button[39m
            [33mclass[39m=[32m"toggle-button"[39m
            [33mtype[39m=[32m"button"[39m
          [36m>[39m
            [36m<span[39m
              [33mclass[39m=[32m"toggle-button__content"[39m
            [36m>[39m
              [36m<span[39m
                [33mclass[39m=[32m"toggle-button__title"[39m
              [36m>[39m
                [0mOption 1[0m
              [36m</span>[39m
            [36m</span>[39m
          [36m</button>[39m
        [36m</li>[39m
        [36m<li>[39m
          [36m<button[39m
            [33mclass[39m=[32m"toggle-button"[39m
            [33mtype[39m=[32m"button"[39m
          [36m>[39m
            [36m<span[39m
              [33mclass[39m=[32m"toggle-button__content"[39m
            [36m>[39m
              [36m<span[39m
                [33mclass[39m=[32m"toggle-button__title"[39m
              [36m>[39m
                [0mOption 2[0m
              [36m</span>[39m
            [36m</span>[39m
          [36m</button>[39m
        [36m</li>[39m
        [36m<li>[39m
          [36m<button[39m
            [33mclass[39m=[32m"toggle-button"[39m
            [33mtype[39m=[32m"button"[39m
          [36m>[39m
            [36m<span[39m
              [33mclass[39m=[32m"toggle-button__content"[39m
            [36m>[39m
              [36m<span[39m
                [33mclass[39m=[32m"toggle-button__title"[39m
              [36m>[39m
                [0mOption 3[0m
              [36m</span>[39m
            [36m</span>[39m
          [36m</button>[39m
        [36m</li>[39m
      [36m</ul>[39m
    [36m</div>[39m
  [36m</div>[39m
[36m</DocumentFragment>[39m"
`;

exports[`ebay-toggle-button-group > renders custom column sizes 1`] = `
"[36m<DocumentFragment>[39m
  [36m<div[39m
    [33mclass[39m=[32m"toggle-button-group"[39m
    [33mdata-columns-md[39m=[32m"6"[39m
    [33mdata-columns-min[39m=[32m"1"[39m
    [33mdata-columns-sm[39m=[32m"3"[39m
    [33mdata-columns-xl[39m=[32m"8"[39m
    [33mdata-columns-xs[39m=[32m"2"[39m
  [36m>[39m
    [36m<ul>[39m
      [36m<li>[39m
        [36m<button[39m
          [33mclass[39m=[32m"toggle-button"[39m
          [33mtype[39m=[32m"button"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"toggle-button__content"[39m
          [36m>[39m
            [36m<span[39m
              [33mclass[39m=[32m"toggle-button__title"[39m
            [36m>[39m
              [0mFirst Item[0m
            [36m</span>[39m
            [36m<span[39m
              [33mclass[39m=[32m"toggle-button__subtitle"[39m
            [36m>[39m
              [0mEmpty on load[0m
            [36m</span>[39m
          [36m</span>[39m
        [36m</button>[39m
      [36m</li>[39m
      [36m<li>[39m
        [36m<button[39m
          [33mclass[39m=[32m"toggle-button"[39m
          [33mtype[39m=[32m"button"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"toggle-button__content"[39m
          [36m>[39m
            [36m<span[39m
              [33mclass[39m=[32m"toggle-button__title"[39m
            [36m>[39m
              [0mSecond Item[0m
            [36m</span>[39m
            [36m<span[39m
              [33mclass[39m=[32m"toggle-button__subtitle"[39m
            [36m>[39m
              [0mEmpty on load[0m
            [36m</span>[39m
          [36m</span>[39m
        [36m</button>[39m
      [36m</li>[39m
      [36m<li>[39m
        [36m<button[39m
          [33maria-pressed[39m=[32m"true"[39m
          [33mclass[39m=[32m"toggle-button"[39m
          [33mtype[39m=[32m"button"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"toggle-button__content"[39m
          [36m>[39m
            [36m<span[39m
              [33mclass[39m=[32m"toggle-button__title"[39m
            [36m>[39m
              [0mThird Item[0m
            [36m</span>[39m
            [36m<span[39m
              [33mclass[39m=[32m"toggle-button__subtitle"[39m
            [36m>[39m
              [0mPressed on load[0m
            [36m</span>[39m
          [36m</span>[39m
        [36m</button>[39m
      [36m</li>[39m
      [36m<li>[39m
        [36m<button[39m
          [33mclass[39m=[32m"toggle-button"[39m
          [33mtype[39m=[32m"button"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"toggle-button__content"[39m
          [36m>[39m
            [36m<span[39m
              [33mclass[39m=[32m"toggle-button__title"[39m
            [36m>[39m
              [0mFourth Item[0m
            [36m</span>[39m
            [36m<span[39m
              [33mclass[39m=[32m"toggle-button__subtitle"[39m
            [36m>[39m
              [0mEmpty on load[0m
            [36m</span>[39m
          [36m</span>[39m
        [36m</button>[39m
      [36m</li>[39m
      [36m<li>[39m
        [36m<button[39m
          [33maria-pressed[39m=[32m"true"[39m
          [33mclass[39m=[32m"toggle-button"[39m
          [33mtype[39m=[32m"button"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"toggle-button__content"[39m
          [36m>[39m
            [36m<span[39m
              [33mclass[39m=[32m"toggle-button__title"[39m
            [36m>[39m
              [0mFifth Item[0m
            [36m</span>[39m
            [36m<span[39m
              [33mclass[39m=[32m"toggle-button__subtitle"[39m
            [36m>[39m
              [0mPressed on load[0m
            [36m</span>[39m
          [36m</span>[39m
        [36m</button>[39m
      [36m</li>[39m
      [36m<li>[39m
        [36m<button[39m
          [33mclass[39m=[32m"toggle-button"[39m
          [33mtype[39m=[32m"button"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"toggle-button__content"[39m
          [36m>[39m
            [36m<span[39m
              [33mclass[39m=[32m"toggle-button__title"[39m
            [36m>[39m
              [0mSixth Item[0m
            [36m</span>[39m
            [36m<span[39m
              [33mclass[39m=[32m"toggle-button__subtitle"[39m
            [36m>[39m
              [0mEmpty on load[0m
            [36m</span>[39m
          [36m</span>[39m
        [36m</button>[39m
      [36m</li>[39m
    [36m</ul>[39m
  [36m</div>[39m
[36m</DocumentFragment>[39m"
`;

exports[`ebay-toggle-button-group > renders default 1`] = `
"[36m<DocumentFragment>[39m
  [36m<div[39m
    [33mclass[39m=[32m"toggle-button-group"[39m
  [36m>[39m
    [36m<ul[39m
      [33maria-label[39m=[32m"Toggle Button Group"[39m
    [36m>[39m
      [36m<li>[39m
        [36m<button[39m
          [33mclass[39m=[32m"toggle-button"[39m
          [33mtype[39m=[32m"button"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"toggle-button__content"[39m
          [36m>[39m
            [36m<span[39m
              [33mclass[39m=[32m"toggle-button__title"[39m
            [36m>[39m
              [0mButton 1[0m
            [36m</span>[39m
          [36m</span>[39m
        [36m</button>[39m
      [36m</li>[39m
      [36m<li>[39m
        [36m<button[39m
          [33mclass[39m=[32m"toggle-button"[39m
          [33mtype[39m=[32m"button"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"toggle-button__content"[39m
          [36m>[39m
            [36m<span[39m
              [33mclass[39m=[32m"toggle-button__title"[39m
            [36m>[39m
              [0mButton 2[0m
            [36m</span>[39m
          [36m</span>[39m
        [36m</button>[39m
      [36m</li>[39m
      [36m<li>[39m
        [36m<button[39m
          [33mclass[39m=[32m"toggle-button"[39m
          [33mtype[39m=[32m"button"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"toggle-button__content"[39m
          [36m>[39m
            [36m<span[39m
              [33mclass[39m=[32m"toggle-button__title"[39m
            [36m>[39m
              [0mButton 3[0m
            [36m</span>[39m
          [36m</span>[39m
        [36m</button>[39m
      [36m</li>[39m
      [36m<li>[39m
        [36m<button[39m
          [33mclass[39m=[32m"toggle-button"[39m
          [33mtype[39m=[32m"button"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"toggle-button__content"[39m
          [36m>[39m
            [36m<span[39m
              [33mclass[39m=[32m"toggle-button__title"[39m
            [36m>[39m
              [0mButton 4[0m
            [36m</span>[39m
          [36m</span>[39m
        [36m</button>[39m
      [36m</li>[39m
      [36m<li>[39m
        [36m<button[39m
          [33mclass[39m=[32m"toggle-button"[39m
          [33mtype[39m=[32m"button"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"toggle-button__content"[39m
          [36m>[39m
            [36m<span[39m
              [33mclass[39m=[32m"toggle-button__title"[39m
            [36m>[39m
              [0mButton 5[0m
            [36m</span>[39m
          [36m</span>[39m
        [36m</button>[39m
      [36m</li>[39m
      [36m<li>[39m
        [36m<button[39m
          [33mclass[39m=[32m"toggle-button"[39m
          [33mtype[39m=[32m"button"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"toggle-button__content"[39m
          [36m>[39m
            [36m<span[39m
              [33mclass[39m=[32m"toggle-button__title"[39m
            [36m>[39m
              [0mButton 6[0m
            [36m</span>[39m
          [36m</span>[39m
        [36m</button>[39m
      [36m</li>[39m
    [36m</ul>[39m
  [36m</div>[39m
[36m</DocumentFragment>[39m"
`;

exports[`ebay-toggle-button-group > renders external label 1`] = `
"[36m<DocumentFragment>[39m
  [36m<h5[39m
    [33mid[39m=[32m"s0-label"[39m
  [36m>[39m
    [0mSelect Items[0m
  [36m</h5>[39m
  [36m<div[39m
    [33mclass[39m=[32m"toggle-button-group"[39m
  [36m>[39m
    [36m<ul[39m
      [33maria-labelledby[39m=[32m"s0-label"[39m
    [36m>[39m
      [36m<li>[39m
        [36m<button[39m
          [33mclass[39m=[32m"toggle-button"[39m
          [33mtype[39m=[32m"button"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"toggle-button__content"[39m
          [36m>[39m
            [36m<span[39m
              [33mclass[39m=[32m"toggle-button__title"[39m
            [36m>[39m
              [0mFirst Item[0m
            [36m</span>[39m
            [36m<span[39m
              [33mclass[39m=[32m"toggle-button__subtitle"[39m
            [36m>[39m
              [0mEmpty on load[0m
            [36m</span>[39m
          [36m</span>[39m
        [36m</button>[39m
      [36m</li>[39m
      [36m<li>[39m
        [36m<button[39m
          [33mclass[39m=[32m"toggle-button"[39m
          [33mtype[39m=[32m"button"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"toggle-button__content"[39m
          [36m>[39m
            [36m<span[39m
              [33mclass[39m=[32m"toggle-button__title"[39m
            [36m>[39m
              [0mSecond Item[0m
            [36m</span>[39m
            [36m<span[39m
              [33mclass[39m=[32m"toggle-button__subtitle"[39m
            [36m>[39m
              [0mEmpty on load[0m
            [36m</span>[39m
          [36m</span>[39m
        [36m</button>[39m
      [36m</li>[39m
      [36m<li>[39m
        [36m<button[39m
          [33maria-pressed[39m=[32m"true"[39m
          [33mclass[39m=[32m"toggle-button"[39m
          [33mtype[39m=[32m"button"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"toggle-button__content"[39m
          [36m>[39m
            [36m<span[39m
              [33mclass[39m=[32m"toggle-button__title"[39m
            [36m>[39m
              [0mThird Item[0m
            [36m</span>[39m
            [36m<span[39m
              [33mclass[39m=[32m"toggle-button__subtitle"[39m
            [36m>[39m
              [0mPressed on load[0m
            [36m</span>[39m
          [36m</span>[39m
        [36m</button>[39m
      [36m</li>[39m
      [36m<li>[39m
        [36m<button[39m
          [33mclass[39m=[32m"toggle-button"[39m
          [33mtype[39m=[32m"button"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"toggle-button__content"[39m
          [36m>[39m
            [36m<span[39m
              [33mclass[39m=[32m"toggle-button__title"[39m
            [36m>[39m
              [0mFourth Item[0m
            [36m</span>[39m
            [36m<span[39m
              [33mclass[39m=[32m"toggle-button__subtitle"[39m
            [36m>[39m
              [0mEmpty on load[0m
            [36m</span>[39m
          [36m</span>[39m
        [36m</button>[39m
      [36m</li>[39m
      [36m<li>[39m
        [36m<button[39m
          [33maria-pressed[39m=[32m"true"[39m
          [33mclass[39m=[32m"toggle-button"[39m
          [33mtype[39m=[32m"button"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"toggle-button__content"[39m
          [36m>[39m
            [36m<span[39m
              [33mclass[39m=[32m"toggle-button__title"[39m
            [36m>[39m
              [0mFifth Item[0m
            [36m</span>[39m
            [36m<span[39m
              [33mclass[39m=[32m"toggle-button__subtitle"[39m
            [36m>[39m
              [0mPressed on load[0m
            [36m</span>[39m
          [36m</span>[39m
        [36m</button>[39m
      [36m</li>[39m
      [36m<li>[39m
        [36m<button[39m
          [33mclass[39m=[32m"toggle-button"[39m
          [33mtype[39m=[32m"button"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"toggle-button__content"[39m
          [36m>[39m
            [36m<span[39m
              [33mclass[39m=[32m"toggle-button__title"[39m
            [36m>[39m
              [0mSixth Item[0m
            [36m</span>[39m
            [36m<span[39m
              [33mclass[39m=[32m"toggle-button__subtitle"[39m
            [36m>[39m
              [0mEmpty on load[0m
            [36m</span>[39m
          [36m</span>[39m
        [36m</button>[39m
      [36m</li>[39m
    [36m</ul>[39m
  [36m</div>[39m
[36m</DocumentFragment>[39m"
`;

exports[`ebay-toggle-button-group > renders with default selected 1`] = `
"[36m<DocumentFragment>[39m
  [36m<div[39m
    [33mclass[39m=[32m"toggle-button-group"[39m
  [36m>[39m
    [36m<ul>[39m
      [36m<li>[39m
        [36m<button[39m
          [33mclass[39m=[32m"toggle-button"[39m
          [33mtype[39m=[32m"button"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"toggle-button__content"[39m
          [36m>[39m
            [36m<span[39m
              [33mclass[39m=[32m"toggle-button__title"[39m
            [36m>[39m
              [0mFirst Item[0m
            [36m</span>[39m
            [36m<span[39m
              [33mclass[39m=[32m"toggle-button__subtitle"[39m
            [36m>[39m
              [0mEmpty on load[0m
            [36m</span>[39m
          [36m</span>[39m
        [36m</button>[39m
      [36m</li>[39m
      [36m<li>[39m
        [36m<button[39m
          [33mclass[39m=[32m"toggle-button"[39m
          [33mtype[39m=[32m"button"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"toggle-button__content"[39m
          [36m>[39m
            [36m<span[39m
              [33mclass[39m=[32m"toggle-button__title"[39m
            [36m>[39m
              [0mSecond Item[0m
            [36m</span>[39m
            [36m<span[39m
              [33mclass[39m=[32m"toggle-button__subtitle"[39m
            [36m>[39m
              [0mEmpty on load[0m
            [36m</span>[39m
          [36m</span>[39m
        [36m</button>[39m
      [36m</li>[39m
      [36m<li>[39m
        [36m<button[39m
          [33maria-pressed[39m=[32m"true"[39m
          [33mclass[39m=[32m"toggle-button"[39m
          [33mtype[39m=[32m"button"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"toggle-button__content"[39m
          [36m>[39m
            [36m<span[39m
              [33mclass[39m=[32m"toggle-button__title"[39m
            [36m>[39m
              [0mThird Item[0m
            [36m</span>[39m
            [36m<span[39m
              [33mclass[39m=[32m"toggle-button__subtitle"[39m
            [36m>[39m
              [0mPressed on load[0m
            [36m</span>[39m
          [36m</span>[39m
        [36m</button>[39m
      [36m</li>[39m
      [36m<li>[39m
        [36m<button[39m
          [33mclass[39m=[32m"toggle-button"[39m
          [33mtype[39m=[32m"button"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"toggle-button__content"[39m
          [36m>[39m
            [36m<span[39m
              [33mclass[39m=[32m"toggle-button__title"[39m
            [36m>[39m
              [0mFourth Item[0m
            [36m</span>[39m
            [36m<span[39m
              [33mclass[39m=[32m"toggle-button__subtitle"[39m
            [36m>[39m
              [0mEmpty on load[0m
            [36m</span>[39m
          [36m</span>[39m
        [36m</button>[39m
      [36m</li>[39m
      [36m<li>[39m
        [36m<button[39m
          [33maria-pressed[39m=[32m"true"[39m
          [33mclass[39m=[32m"toggle-button"[39m
          [33mtype[39m=[32m"button"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"toggle-button__content"[39m
          [36m>[39m
            [36m<span[39m
              [33mclass[39m=[32m"toggle-button__title"[39m
            [36m>[39m
              [0mFifth Item[0m
            [36m</span>[39m
            [36m<span[39m
              [33mclass[39m=[32m"toggle-button__subtitle"[39m
            [36m>[39m
              [0mPressed on load[0m
            [36m</span>[39m
          [36m</span>[39m
        [36m</button>[39m
      [36m</li>[39m
      [36m<li>[39m
        [36m<button[39m
          [33mclass[39m=[32m"toggle-button"[39m
          [33mtype[39m=[32m"button"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"toggle-button__content"[39m
          [36m>[39m
            [36m<span[39m
              [33mclass[39m=[32m"toggle-button__title"[39m
            [36m>[39m
              [0mSixth Item[0m
            [36m</span>[39m
            [36m<span[39m
              [33mclass[39m=[32m"toggle-button__subtitle"[39m
            [36m>[39m
              [0mEmpty on load[0m
            [36m</span>[39m
          [36m</span>[39m
        [36m</button>[39m
      [36m</li>[39m
    [36m</ul>[39m
  [36m</div>[39m
[36m</DocumentFragment>[39m"
`;

exports[`ebay-toggle-button-group > renders with ons 1`] = `
"[36m<DocumentFragment>[39m
  [36m<div[39m
    [33mclass[39m=[32m"toggle-button-group"[39m
  [36m>[39m
    [36m<ul>[39m
      [36m<li>[39m
        [36m<button[39m
          [33mclass[39m=[32m"toggle-button toggle-button--list-layout"[39m
          [33mtype[39m=[32m"button"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"toggle-button__icon"[39m
          [36m>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--24"[39m
              [33mdata-marko-key[39m=[32m"@svg s0-0-3[0]-2-1-0"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<defs[39m
                [33mdata-marko-key[39m=[32m"@defs s0-0-3[0]-2-1-0"[39m
              [36m>[39m
                [36m<symbol[39m
                  [33mid[39m=[32m"icon-car-24"[39m
                  [33mviewBox[39m=[32m"0 0 24 24"[39m
                [36m>[39m
                  [36m<path[39m
                    [33md[39m=[32m"M4 14a1 1 0 0 1 1-1h2a1 1 0 1 1 0 2H5a1 1 0 0 1-1-1Zm13-1a1 1 0 1 0 0 2h2a1 1 0 1 0 0-2h-2Z"[39m
                  [36m/>[39m
                  [36m<path[39m
                    [33mclip-rule[39m=[32m"evenodd"[39m
                    [33md[39m=[32m"m3.28 8 1.088-3.265A4 4 0 0 1 8.162 2h7.676a4 4 0 0 1 3.795 2.735L20.72 8H23a1 1 0 1 1 0 2h-1.05c.604.838 1.041 1.455 1.341 1.946.241.396.427.762.546 1.145.123.395.163.762.163 1.146V19.5a2.5 2.5 0 0 1-2.5 2.5h-1a2.5 2.5 0 0 1-2.5-2.5V19H6v.5A2.5 2.5 0 0 1 3.5 22h-1A2.5 2.5 0 0 1 0 19.5v-5.263c0-.384.04-.751.163-1.146.12-.383.304-.749.546-1.145.3-.49.737-1.107 1.34-1.946H1a1 1 0 0 1 0-2h2.28Zm2.985-2.632A2 2 0 0 1 8.162 4h7.676a2 2 0 0 1 1.897 1.368L18.945 9H5.056l1.21-3.632Zm-3.849 7.62c.288-.473.721-1.075 1.392-2.006.062.012.126.018.192.018h16c.066 0 .13-.006.192-.018.67.93 1.104 1.533 1.392 2.006.196.322.292.531.344.699.05.157.072.316.072.55V19.5a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5V18a1 1 0 0 0-1-1H5a1 1 0 0 0-1 1v1.5a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-5.263c0-.234.023-.393.072-.55.052-.168.148-.377.344-.7Z"[39m
                    [33mfill-rule[39m=[32m"evenodd"[39m
                  [36m/>[39m
                [36m</symbol>[39m
              [36m</defs>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-car-24"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</span>[39m
          [36m<span[39m
            [33mclass[39m=[32m"toggle-button__content"[39m
          [36m>[39m
            [36m<span[39m
              [33mclass[39m=[32m"toggle-button__title"[39m
            [36m>[39m
              [0mIcon 1[0m
            [36m</span>[39m
            [36m<span[39m
              [33mclass[39m=[32m"toggle-button__subtitle"[39m
            [36m>[39m
              [0mCar[0m
            [36m</span>[39m
          [36m</span>[39m
        [36m</button>[39m
      [36m</li>[39m
      [36m<li>[39m
        [36m<button[39m
          [33mclass[39m=[32m"toggle-button toggle-button--list-layout"[39m
          [33mtype[39m=[32m"button"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"toggle-button__icon"[39m
          [36m>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--24"[39m
              [33mdata-marko-key[39m=[32m"@svg s0-0-3[1]-2-2-0"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<defs[39m
                [33mdata-marko-key[39m=[32m"@defs s0-0-3[1]-2-2-0"[39m
              [36m>[39m
                [36m<symbol[39m
                  [33mid[39m=[32m"icon-atv-24"[39m
                  [33mviewBox[39m=[32m"0 0 24 24"[39m
                [36m>[39m
                  [36m<path[39m
                    [33md[39m=[32m"M11 8a1 1 0 1 0 0 2h2a1 1 0 1 0 0-2h-2Z"[39m
                  [36m/>[39m
                  [36m<path[39m
                    [33mclip-rule[39m=[32m"evenodd"[39m
                    [33md[39m=[32m"M4 1a1 1 0 0 0 0 2h2.379a.5.5 0 0 1 .353.146l1.981 1.982L7.465 7H5.618A2 2 0 0 0 3.83 8.106l-.71 1.42a1.03 1.03 0 0 0 .067 1.055c.188.263.515.427.837.419a7.472 7.472 0 0 1 3.319.789c.383.191.741.401.804.873l.268 2.013L7 15.382V14.5A2.5 2.5 0 0 0 4.5 12h-1A2.5 2.5 0 0 0 1 14.5v6A2.5 2.5 0 0 0 3.5 23h1A2.5 2.5 0 0 0 7 20.5v-2.882l1.694-.847.083.625A3 3 0 0 0 11.751 20h.498a3 3 0 0 0 2.974-2.604l.083-.625 1.694.847V20.5a2.5 2.5 0 0 0 2.5 2.5h1a2.5 2.5 0 0 0 2.5-2.5v-6a2.5 2.5 0 0 0-2.5-2.5h-1a2.5 2.5 0 0 0-2.5 2.5v.882l-1.415-.707.269-2.013c.063-.472.421-.682.804-.873A7.471 7.471 0 0 1 19.977 11c.379.01.74-.206.913-.543a1.03 1.03 0 0 0-.003-.92l-.716-1.431A2 2 0 0 0 18.382 7h-1.847l-1.248-1.873 1.98-1.98A.5.5 0 0 1 17.622 3H20a1 1 0 1 0 0-2h-2.379a2.5 2.5 0 0 0-1.767.732l-2.122 2.122A.5.5 0 0 1 13.38 4h-2.76a.5.5 0 0 1-.353-.146L8.146 1.732A2.5 2.5 0 0 0 6.38 1H4Zm1.554 8.128L5.618 9H8a1 1 0 0 0 .832-.445l1.704-2.556h2.928l1.704 2.556A1 1 0 0 0 16 9h2.382l.064.128c-1.045.174-2.02.541-2.964 1.013a2.961 2.961 0 0 0-1.61 2.257l-.632 4.734a1 1 0 0 1-.991.868h-.498a1 1 0 0 1-.991-.868l-.631-4.734a2.961 2.961 0 0 0-1.611-2.257c-.944-.472-1.919-.839-2.964-1.013ZM5 14.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v6a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-6Zm14 6v-6a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5Z"[39m
                    [33mfill-rule[39m=[32m"evenodd"[39m
                  [36m/>[39m
                [36m</symbol>[39m
              [36m</defs>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-atv-24"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</span>[39m
          [36m<span[39m
            [33mclass[39m=[32m"toggle-button__content"[39m
          [36m>[39m
            [36m<span[39m
              [33mclass[39m=[32m"toggle-button__title"[39m
            [36m>[39m
              [0mIcon 2[0m
            [36m</span>[39m
            [36m<span[39m
              [33mclass[39m=[32m"toggle-button__subtitle"[39m
            [36m>[39m
              [0mATV[0m
            [36m</span>[39m
          [36m</span>[39m
        [36m</button>[39m
      [36m</li>[39m
      [36m<li>[39m
        [36m<button[39m
          [33mclass[39m=[32m"toggle-button toggle-button--list-layout"[39m
          [33mtype[39m=[32m"button"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"toggle-button__icon"[39m
          [36m>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--24"[39m
              [33mdata-marko-key[39m=[32m"@svg s0-0-3[2]-2-3-0"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>..."
`;
